Fix general layout problems
This commit fix some general layout problems.

--- a/app/assets/stylesheets/manager/manager.scss
+++ b/app/assets/stylesheets/manager/manager.scss
@@ -1,6 +1,12 @@
 .manager {
   main {
-    display: unset;
+    flex-direction: row;
+
+    > .container {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+    }
 
     .content {
       display: block;
